--- a/aleña.html
+++ b/aleña.html
@@ -78,8 +78,8 @@
             <div class="col-md-12">
                <div class="offcanvas-wrapper">
                   <div class="offcanvas-inner">
-                      <a href="index.html" class="logo">
-                        <img src="images/logo/logoNew.png" alt="" style="max-width: 88px; height: 88px;">
+                     <a href="index.html" class="logo">
+                         <img src="images/logo/logoNew.png" alt="" style="max-width: 88px; height: 88px;">
                      </a>
                      <p align="justify">Equipo creativo dedicado al diseño y desarrollo de paginas web personalizadas. <br> Portafolios, Landing-page, e-comerce, e-learning, catalogos y más.</p>
                      <div class="row">
@@ -120,8 +120,7 @@
                               </div>
                               <!-- End contact Icon -->
                               <div class="contact-info">
-                                 <h3>info@buckapi
-                                 .com.ve</h3>
+                                 <h3>info@buckapi.com</h3>
                                  <p>24/7 Soporte</p>
                               </div>
                               <!-- End Contact Info -->
@@ -133,11 +132,9 @@
                      <!-- End Contact Row -->
                      <div class="footer-social-link">
                         <ul>
-                           <li><a href="https://wa.me/584147529202" target="_blanck"><i class="fa fa-whatsapp"></i></a></li>
-                            <li><a href="https://www.facebook.com/buckapi
-                              " target="_blanck"><i class="fa fa-facebook"></i></a></li>
-                           <li><a href="https://www.instagram.com/buckapi
-                              " target="_blanck"><i class="fa fa-instagram"></i></a></li>
+                           <li><a href="https://wa.me/584147529202" target="_blank"><i class="fa fa-whatsapp"></i></a></li>
+                            <li><a href="https://www.facebook.com/buckapi" target="_blank"><i class="fa fa-facebook"></i></a></li>
+                           <li><a href="https://www.instagram.com/buckapi" target="_blank"><i class="fa fa-instagram"></i></a></li>
                         </ul>
                      </div>
                      <div class="menu-subscribe">
@@ -175,7 +172,7 @@
       <div class="tw-head ">
          <div class="container">
             <nav class="navbar navbar-expand-lg navbar-light">
-                     <a class="navbar-brand tw-nav-brand" href="index.html">
+                    <a class="navbar-brand tw-nav-brand" href="index.html">
                         <img src="images/logo/logoNew.png" alt="BUCKAPI"  style="max-width: 88px; height: 88px;">
                     </a>
                     <!-- End of Navbar Brand -->
@@ -188,7 +185,7 @@
                        <ul class="navbar-nav">
                      
                      <!-- End Dropdown -->
-                     <li class="nav-item"><a class="nav-link" href="portafolio/portfolio.html">Portafolio</a></li>
+                     <li class="nav-item"><a class="nav-link" href="portafolio.html">Portafolio</a></li>
                      <!-- End Dropdown -->
                      <li class="nav-item dropdown">
                         <a class="nav-link" style="cursor: pointer;" data-toggle="dropdown">
@@ -407,15 +404,13 @@
                      <img src="images/footer_logo.png" alt="footer_logo" class="img-fluid">
                   </a>
                   <p class="footer-info-text">
-                     Implementamos soluciones óptimas para tu sitio web.
+                     Desarrollamos e implementamos soluciones óptimas para usted.
                   </p>
                   <div class="footer-social-link">
                      <h3>Síguenos en las RRSS</h3>
                      <ul>
-                        <li><a href="https://www.facebook.com/buckapi
-                           " target="_blanck"><i class="fa fa-facebook"></i></a></li>
-                        <li><a href="https://www.instagram.com/buckapi
-                           " target="_blanck"><i class="fa fa-instagram"></i></a></li>
+                        <li><a href="https://www.facebook.com/buckapi" target="_blank"><i class="fa fa-facebook"></i></a></li>
+                        <li><a href="https://www.instagram.com/buckapi" target="_blank"><i class="fa fa-instagram"></i></a></li>
                      </ul>
                   </div>
                   <!-- End Social link -->
@@ -423,8 +418,7 @@
                <!-- End Footer info -->
                <div class="footer-awarad">
                   <img src="images/icon/best.png" alt="">
-                  <p>Buckapi
-                   2020</p>
+                  <p>BUCKAPI 2016-2021</p>
                </div>
             </div>
             <!-- End Col -->
@@ -471,7 +465,7 @@
                            <span class="animate-border border-black"></span>
                         </div>
                         <ul>
-                           <li><a href="portafolio/portfolio.html">Portafolio</a></li>
+                           <li><a href="portafolio.html">Portafolio</a></li>
                         </ul>
                         
                      </div>
@@ -530,7 +524,7 @@
    
       <!-- End Back to top -->
 
-         <a tw-mt-30 href="https://wa.me/584147529202?text=Hola!!%20necesito%20de%20los%20servicios%20de%20Buckapi" class="whatsapp" target="_blank" title="Hablemos por whatsapp !" style="color: white;"> 
+         <a tw-mt-30 href="https://wa.me/584147529202?text=Hola!!%20necesito%20de%20los%20servicios%20de%20buckapi" class="whatsapp" target="_blank" title="Hablemos por whatsapp !" style="color: white;"> 
          <i class="fa fa-whatsapp"></i>
          </a>
    </footer>
