--- a/portafolio/imdris.html
+++ b/portafolio/imdris.html
@@ -149,10 +149,10 @@
         <div class="col-lg-7">
           <div class="common-heading pp p-details">
             <span>Diseño, desarrollo e implementación de Pàgina web.</span>
-            <h1>Aleña quinchos a la leña</h1>
-            <p>Pagina web de tipo informativa, contiene galerias y proyectos desarrollados asi como información de la empresa y de contacto. Sitio completamente responsivo.</p>
-            <p>Aleña es una compañia dedicada al diseño y construcción en Santiago de Chile, se caracterizan por mantener la  excelencia y estilismo en sus proyectos y como carta de presentación de su trabajo obtuvieron su página web acorde a su estilo.
-            Se inclinan por cumplir con los estandares y la normativa establecidas en Chile, y para nosotros ha sido un gran placer brindar apoyar a este grupo de profesionales con el ofreciendo el buen servicio que todo cliente merece.</p>
+            <h1>Imdris. soluciones sustentables </h1>
+            <p>Pagina web de tipo informativa y de recolección de donativos bajo paypal, contiene galerias, muestra las acciones en las que estan enfocados y a su vez la información de la organización y de contacto. Sitio completamente responsivo.</p>
+            <p>Imdris es una organización en Mexico enfocada en el desarrollo sostenible y sustentable haciendo uso de los recursos naturales, se basan en orientar a comunidades para una mejor calidad de vida y uso de recursos.
+            </p>
           </div>
         </div>
         <div class="col-lg-5">
@@ -161,17 +161,17 @@
               <ul>
                 <li>
                   <i class="fas fa-user"></i>
-                  <p>Nombre del cliente: <span>Aleña quinchos a la leña. Chile</span></p>
+                  <p>Nombre del cliente: <span>Imdris. México</span></p>
                 </li>
                 <li>
                   <i class="fas fa-tags"></i>
-                  <p>Categoria de proyectos: <span>Desarrollo de paginas web</span></p>
+                  <p>Categoria de proyectos: <span>Pagina web</span></p>
                 </li>
                 <li>
                   <i class="fas fa-calendar-alt"></i>
-                  <p>Fecha de creación: <span>May 2020</span></p>
+                  <p>Fecha de creación: <span>Mar. 2021</span></p>
                 </li>
-                <li><a href="https://www.aleña.cl" target="_black">Visitar sitio web</a></li>
+                <li><a href="https://www.imdris.org" target="_black">Visitar sitio web</a></li>
               </ul>
             </div>
           </div>
