--- a/portafolio/biker.html
+++ b/portafolio/biker.html
@@ -149,10 +149,9 @@
         <div class="col-lg-7">
           <div class="common-heading pp p-details">
             <span>Diseño, desarrollo e implementación de Pàgina web.</span>
-            <h1>Imdris. soluciones sustentables </h1>
-            <p>Pagina web de tipo informativa y de recolección de donativos bajo paypal, contiene galerias, muestra las acciones en las que estan enfocados y a su vez la información de la organización y de contacto. Sitio completamente responsivo.</p>
-            <p>Imdris es una organización en Mexico enfocada en el desarrollo sostenible y sustentable haciendo uso de los recursos naturales, se basan en orientar a comunidades para una mejor calidad de vida y uso de recursos.
-            </p>
+            <h1>Biker Tours</h1>
+            <p>Pagina web de aterrizaje, Landing para informar sobre este proyecto a turistas y motorizado de todo Mexico, asi como de captar clientes a traves de la misma. Sitio completamente responsivo.</p>
+            
           </div>
         </div>
         <div class="col-lg-5">
@@ -161,17 +160,17 @@
               <ul>
                 <li>
                   <i class="fas fa-user"></i>
-                  <p>Nombre del cliente: <span>Imdris. México</span></p>
+                  <p>Nombre del cliente: <span>Biker Tours. México</span></p>
                 </li>
                 <li>
                   <i class="fas fa-tags"></i>
-                  <p>Categoria de proyectos: <span>Pagina web</span></p>
+                  <p>Categoria de proyectos: <span>Pagina web Landing</span></p>
                 </li>
                 <li>
                   <i class="fas fa-calendar-alt"></i>
-                  <p>Fecha de creación: <span>Mar. 2021</span></p>
+                  <p>Fecha de creación: <span>Julio 2021</span></p>
                 </li>
-                <li><a href="https://www.imdris.org" target="_black">Visitar sitio web</a></li>
+                <li><a href="https://www.bikertours.mx" target="_black">Visitar sitio web</a></li>
               </ul>
             </div>
           </div>
