--- a/portafolio/francoazm.html
+++ b/portafolio/francoazm.html
@@ -148,10 +148,10 @@
       <div class="row justify-content-left">
         <div class="col-lg-7">
           <div class="common-heading pp p-details">
-            <span>Diseño, desarrollo e implementación de Pàgina web.</span>
-            <h1>Imdris. soluciones sustentables </h1>
-            <p>Pagina web de tipo informativa y de recolección de donativos bajo paypal, contiene galerias, muestra las acciones en las que estan enfocados y a su vez la información de la organización y de contacto. Sitio completamente responsivo.</p>
-            <p>Imdris es una organización en Mexico enfocada en el desarrollo sostenible y sustentable haciendo uso de los recursos naturales, se basan en orientar a comunidades para una mejor calidad de vida y uso de recursos.
+            <span> Pàgina web - Portafolio.</span>
+            <h1>POrtafolio profesional Francoazm</h1>
+            <p>Pagina web de tipo informativa, contiene galerias y proyectos desarrollados. Sitio completamente responsivo, cuenta con dinamismo y efectos llamativos de un diseñador grafico tal como lo es este profesional</p>
+            <p>Francisco es un diseñador con gran experiencia en el area de Branding y creación de imagenes corporativas asi como trabajo para redes sociales. Colaborador de nuestro equipo como agencia creativa digital
             </p>
           </div>
         </div>
@@ -161,17 +161,17 @@
               <ul>
                 <li>
                   <i class="fas fa-user"></i>
-                  <p>Nombre del cliente: <span>Imdris. México</span></p>
+                  <p>Nombre del cliente: <span>Francisco. Venezuela</span></p>
                 </li>
                 <li>
                   <i class="fas fa-tags"></i>
-                  <p>Categoria de proyectos: <span>Pagina web</span></p>
+                  <p>Categoria de proyectos: <span>Pagina web - Portafolio</span></p>
                 </li>
                 <li>
                   <i class="fas fa-calendar-alt"></i>
-                  <p>Fecha de creación: <span>Mar. 2021</span></p>
+                  <p>Fecha de creación: <span>Mar 2020</span></p>
                 </li>
-                <li><a href="https://www.imdris.org" target="_black">Visitar sitio web</a></li>
+                <li><a href="https://www.buckapi.com/Francoazm" target="_black">Visitar sitio web</a></li>
               </ul>
             </div>
           </div>
