--- a/portafolio/jkd.html
+++ b/portafolio/jkd.html
@@ -148,11 +148,11 @@
       <div class="row justify-content-left">
         <div class="col-lg-7">
           <div class="common-heading pp p-details">
-            <span>Diseño, desarrollo e implementación de Pàgina web.</span>
-            <h1>Imdris. soluciones sustentables </h1>
-            <p>Pagina web de tipo informativa y de recolección de donativos bajo paypal, contiene galerias, muestra las acciones en las que estan enfocados y a su vez la información de la organización y de contacto. Sitio completamente responsivo.</p>
-            <p>Imdris es una organización en Mexico enfocada en el desarrollo sostenible y sustentable haciendo uso de los recursos naturales, se basan en orientar a comunidades para una mejor calidad de vida y uso de recursos.
-            </p>
+            <span>Pàgina web.</span>
+            <h1>JKD Rotulaciones</h1>
+            <p>Pagina web de tipo informativa, contiene galerias, catalogo de servicios e información de la empresa y de contacto. Sitio completamente responsivo.</p>
+            <p>JKD es una empresa dedicada al diseño, impresion y rotulación en Barcelona España, se destaca por su pulcritud en entrega de trabajos rapidez y eficiencia.
+           La publicidad es la puerta hacia el éxito, ya que cuanto más sepan de su empresa o negocio mejores conversiones se obtendran. </p>
           </div>
         </div>
         <div class="col-lg-5">
@@ -161,17 +161,17 @@
               <ul>
                 <li>
                   <i class="fas fa-user"></i>
-                  <p>Nombre del cliente: <span>Imdris. México</span></p>
+                  <p>Nombre del cliente: <span>JKD Rotulación. España</span></p>
                 </li>
                 <li>
                   <i class="fas fa-tags"></i>
-                  <p>Categoria de proyectos: <span>Pagina web</span></p>
+                  <p>Categoria de proyectos: <span>Paginas web</span></p>
                 </li>
                 <li>
                   <i class="fas fa-calendar-alt"></i>
-                  <p>Fecha de creación: <span>Mar. 2021</span></p>
+                  <p>Fecha de creación: <span>Enero 2019</span></p>
                 </li>
-                <li><a href="https://www.imdris.org" target="_black">Visitar sitio web</a></li>
+                <li><a href="https://www.jkdrotulacio.com" target="_black">Visitar sitio web</a></li>
               </ul>
             </div>
           </div>
