--- a/portafolio/portfolio.html
+++ b/portafolio/portfolio.html
@@ -23,7 +23,7 @@
 	<header class="header-pr nav-bg-w main-header navfix fixed-top menu-white">
 			<div class="container-fluid m-pad">
 				<div class="menu-header">
-					<div class="dsk-logo"><a class="nav-brand" href="digital-agency.html">
+					<div class="dsk-logo"><a class="nav-brand" href="../index.html">
 						<img src="../images/logo/logoNew.png" alt="Logo" class="mega-white-logo"/>
 						<img src="../images/logo/logoNew.png" alt="Logo" class="mega-darks-logo"/>
 					</a></div>
@@ -215,7 +215,7 @@
 			<a href="imdris.html"><img src="images/portfolio/image-3.jpg" alt="image" class="img-fluid"/> </a>
 			</div>
 			<div class="item-info">
-			<h4><a href="https://www.imdris.org" target="_blanck">Imdris</a></h4>
+			<h4><a href="imdris.html" target="_blanck">Imdris</a></h4>
 			<p>Pagina web</p>
 			</div>
 			</div>
@@ -226,7 +226,7 @@
 			<a href="ventiluz.html"><img src="images/portfolio/image-4.jpg" alt="image" class="img-fluid"/> </a>
 			</div>
 			<div class="item-info">
-			<h4><a href="#" target="_blanck">Ventiluz-Servicios</a></h4>
+			<h4><a href="ventiluz.html" target="_blanck">Ventiluz-Servicios</a></h4>
 			<p>Pagina web</p>
 			</div>
 			</div>
@@ -237,7 +237,7 @@
 			<a href="alena.html"><img src="images/portfolio/image-5.jpg" alt="image" class="img-fluid"/> </a>
 			</div>
 			<div class="item-info">
-			<h4><a href="http://www.aleña.cl" target="_blanck">Aleña</a></h4>
+			<h4><a href="alena.html" target="_blanck">Aleña</a></h4>
 			<p>Pagina web</p>
 			</div>
 			</div>
@@ -259,7 +259,7 @@
 			<a href="#"><img src="images/portfolio/image-6.jpg" alt="image" class="img-fluid"/> </a>
 			</div>
 			<div class="item-info">
-			<h4><a href="https://www.mentamarvzla.com" target="_blanck">Menta Mar Vzla</a></h4>
+			<h4><a href="https://www.corpcssca.com" target="_blanck">CSS CA</a></h4>
 			<p>PWA, E-commerce</p>
 			</div>
 			</div>
@@ -278,10 +278,10 @@
 		<div class="col-lg-4 col-sm-6 single-card-item website">
 			<div class="isotope_item hover-scale">
 			<div class="item-image">
-			<a href="#"><img src="images/portfolio/image-7.jpg" alt="image" class="img-fluid"/> </a>
+			<a href="zanitizing.html"><img src="images/portfolio/image-7.jpg" alt="image" class="img-fluid"/> </a>
 			</div>
 			<div class="item-info">
-			<h4><a href="https://www.zanitizing.mx" target="_blanck">Zanitizing</a></h4>
+			<h4><a href="zanitizing.html" target="_blanck">Zanitizing</a></h4>
 			<p>Pagina web</p>
 			</div>
 			</div>
@@ -289,10 +289,10 @@
 		<div class="col-lg-4 col-sm-6 single-card-item website">
 			<div class="isotope_item hover-scale">
 			<div class="item-image">
-			<a href="#"><img src="images/portfolio/image-8.jpg" alt="image" class="img-fluid"/> </a>
+			<a href="planing.html"><img src="images/portfolio/image-8.jpg" alt="image" class="img-fluid"/> </a>
 			</div>
 			<div class="item-info">
-			<h4><a href="htps://www.planningltda.cl" target="_blanck">PlanningLTDA</a></h4>
+			<h4><a href="planing.html" target="_blanck">PlanningLTDA</a></h4>
 			<p>Pagina web Portafolio profesional</p>
 			</div>
 			</div>
@@ -300,10 +300,10 @@
 		<div class="col-lg-4 col-sm-6 single-card-item  website">
 			<div class="isotope_item hover-scale">
 			<div class="item-image">
-			<a href="#" target="_blanck"><img src="images/portfolio/image-9.jpg" alt="image" class="img-fluid"/> </a>
+			<a href="jkd.html" target="_blanck"><img src="images/portfolio/image-9.jpg" alt="image" class="img-fluid"/> </a>
 			</div>
 			<div class="item-info">
-			<h4><a href="#">JKDRotulación</a></h4>
+			<h4><a href="jkd.html">JKDRotulación</a></h4>
 			<p>Pagina web</p>
 			</div>
 			</div>
@@ -311,10 +311,10 @@
 		<div class="col-lg-4 col-sm-6 single-card-item  website">
 			<div class="isotope_item hover-scale">
 			<div class="item-image">
-			<a href="#"><img src="images/portfolio/image-9.jpg" alt="image" class="img-fluid"/> </a>
+			<a href="francoazm.html"><img src="images/portfolio/image-9.jpg" alt="image" class="img-fluid"/> </a>
 			</div>
 			<div class="item-info">
-			<h4><a href="https://www.buckapi.com/Francoazm" target="_blanck">Francoazm</a></h4>
+			<h4><a href="francoazm.html" target="_blanck">Francoazm</a></h4>
 			<p>Pagina web Portafolio profesional</p>
 			</div>
 			</div>
