--- a/portafolio/zanitizing.html
+++ b/portafolio/zanitizing.html
@@ -148,11 +148,10 @@
       <div class="row justify-content-left">
         <div class="col-lg-7">
           <div class="common-heading pp p-details">
-            <span>Diseño, desarrollo e implementación de Pàgina web.</span>
-            <h1>Imdris. soluciones sustentables </h1>
-            <p>Pagina web de tipo informativa y de recolección de donativos bajo paypal, contiene galerias, muestra las acciones en las que estan enfocados y a su vez la información de la organización y de contacto. Sitio completamente responsivo.</p>
-            <p>Imdris es una organización en Mexico enfocada en el desarrollo sostenible y sustentable haciendo uso de los recursos naturales, se basan en orientar a comunidades para una mejor calidad de vida y uso de recursos.
-            </p>
+            <span>Pàgina web - Landing.</span>
+            <h1>Zanitizing</h1>
+            <p>Pagina web Landing, se busca promover el servicio de instalación de salas de limpieza y desinfeción ante esta situación mundial, Zanitizing es una empresa que maneja desde la manufactura hasta la instalación de arcos zanitisantes en todo México, Sitio completamente responsivo.</p>
+            
           </div>
         </div>
         <div class="col-lg-5">
@@ -161,17 +160,17 @@
               <ul>
                 <li>
                   <i class="fas fa-user"></i>
-                  <p>Nombre del cliente: <span>Imdris. México</span></p>
+                  <p>Nombre del cliente: <span>Zanitizing. México</span></p>
                 </li>
                 <li>
                   <i class="fas fa-tags"></i>
-                  <p>Categoria de proyectos: <span>Pagina web</span></p>
+                  <p>Categoria de proyectos: <span>Paginas web</span></p>
                 </li>
                 <li>
                   <i class="fas fa-calendar-alt"></i>
-                  <p>Fecha de creación: <span>Mar. 2021</span></p>
+                  <p>Fecha de creación: <span>Abril 2021</span></p>
                 </li>
-                <li><a href="https://www.imdris.org" target="_black">Visitar sitio web</a></li>
+                <li><a href="https://www.zanitizing.mx" target="_black">Visitar sitio web</a></li>
               </ul>
             </div>
           </div>
