--- a/portafolio/planing.html
+++ b/portafolio/planing.html
@@ -148,11 +148,10 @@
       <div class="row justify-content-left">
         <div class="col-lg-7">
           <div class="common-heading pp p-details">
-            <span>Diseño, desarrollo e implementación de Pàgina web.</span>
-            <h1>Imdris. soluciones sustentables </h1>
-            <p>Pagina web de tipo informativa y de recolección de donativos bajo paypal, contiene galerias, muestra las acciones en las que estan enfocados y a su vez la información de la organización y de contacto. Sitio completamente responsivo.</p>
-            <p>Imdris es una organización en Mexico enfocada en el desarrollo sostenible y sustentable haciendo uso de los recursos naturales, se basan en orientar a comunidades para una mejor calidad de vida y uso de recursos.
-            </p>
+            <span>Pàgina web - catalogo de servicios.</span>
+            <h1>Planing LTDA</h1>
+            <p>Pagina web informativa, ofrece información multimedia sobre la empresa, para demostrar el profesionalismo en una sola pagina tipo Landing</p>
+            <p>PlaningLTDA es el nombre que le da un profesional a su empresa, cuyos servicios son netamente profesionales en el area de ingenieria y automatizaciones industriales en Chile, cumplen con los estandares y la normativa establecidas en Chile, y para nosotros ha sido un gran placer brindar apoyar a este profesional con el diseño e implementación de su sitio web.</p>
           </div>
         </div>
         <div class="col-lg-5">
@@ -161,17 +160,17 @@
               <ul>
                 <li>
                   <i class="fas fa-user"></i>
-                  <p>Nombre del cliente: <span>Imdris. México</span></p>
+                  <p>Nombre del cliente: <span>PlaningLTDA. Chile</span></p>
                 </li>
                 <li>
                   <i class="fas fa-tags"></i>
-                  <p>Categoria de proyectos: <span>Pagina web</span></p>
+                  <p>Categoria de proyectos: <span>Paginas web</span></p>
                 </li>
                 <li>
                   <i class="fas fa-calendar-alt"></i>
-                  <p>Fecha de creación: <span>Mar. 2021</span></p>
+                  <p>Fecha de creación: <span>Junio 2021</span></p>
                 </li>
-                <li><a href="https://www.imdris.org" target="_black">Visitar sitio web</a></li>
+                <li><a href="https://www.planingltda.cl" target="_black">Visitar sitio web</a></li>
               </ul>
             </div>
           </div>
