--- a/portafolio/ventiluz.html
+++ b/portafolio/ventiluz.html
@@ -148,11 +148,11 @@
       <div class="row justify-content-left">
         <div class="col-lg-7">
           <div class="common-heading pp p-details">
-            <span>Diseño, desarrollo e implementación de Pàgina web.</span>
-            <h1>Imdris. soluciones sustentables </h1>
-            <p>Pagina web de tipo informativa y de recolección de donativos bajo paypal, contiene galerias, muestra las acciones en las que estan enfocados y a su vez la información de la organización y de contacto. Sitio completamente responsivo.</p>
-            <p>Imdris es una organización en Mexico enfocada en el desarrollo sostenible y sustentable haciendo uso de los recursos naturales, se basan en orientar a comunidades para una mejor calidad de vida y uso de recursos.
-            </p>
+            <span>Pagina web - diseño de marca.</span>
+            <h1>Ventiluz ingenieria civil</h1>
+            <p>Pagina web informativa, muestra el catalogo de servicios, y el profesionalismo de este equipo de trabajo en Argentina. Sitio completamente responsivo.</p>
+            <p>Cumplen con los estandares y la normativa establecidas en Argentina, para la ejecución de proyectos, entre ellas informar con amplitud sobre los servicios que presta la empresa.</p>
+            <p>Creación de marca de identidad (Logotipo y tarjeta de presentación)</p>
           </div>
         </div>
         <div class="col-lg-5">
@@ -161,17 +161,17 @@
               <ul>
                 <li>
                   <i class="fas fa-user"></i>
-                  <p>Nombre del cliente: <span>Imdris. México</span></p>
+                  <p>Nombre del cliente: <span>Ventiluz. Argentina</span></p>
                 </li>
                 <li>
                   <i class="fas fa-tags"></i>
-                  <p>Categoria de proyectos: <span>Pagina web</span></p>
+                  <p>Categoria de proyectos: <span>Paginas web y diseño gráfico</span></p>
                 </li>
                 <li>
                   <i class="fas fa-calendar-alt"></i>
-                  <p>Fecha de creación: <span>Mar. 2021</span></p>
+                  <p>Fecha de creación: <span>May 2021</span></p>
                 </li>
-                <li><a href="https://www.imdris.org" target="_black">Visitar sitio web</a></li>
+                <li><a href="https://www.ventiluz-servicios.com" target="_black">Visitar sitio web</a></li>
               </ul>
             </div>
           </div>
