--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
                      </div>
                      <div class="col-md-6">
                         <div class="slider-content">
-                           <h1>Páginas, <span>Tiendas </span> y Apps </h1>
+                           <h1>Aplicaciones, <span>Tiendas </span> y Paginas web </h1>
                            <p>Desarollamos lo que Usted necesita</p>
                            <a href="#tw-service" class="btn btn-primary">Que tipo de página web deseas?</a>
                         </div>
