--- a/portafolio/portfolio.html
+++ b/portafolio/portfolio.html
@@ -90,7 +90,7 @@
 			<!--Mobile Menu-->
 			<nav id="main-nav">
 				<ul class="first-nav">
-					<li><a href="#">Portfolio</a></li>
+					<li><a href="#">Portafolio</a></li>
 					<li>
 						<a href="#">La web que necesitas</a>
 						<ul>
@@ -178,9 +178,9 @@
 <div class="filters">
 <ul class="filter-menu">
 <li data-filter="*" class="is-checked">Todo</li>
+<li data-filter=".app">Aplicaciones</li>
 <li data-filter=".website">Paginas web</li>
-<li data-filter=".app">PWA</li>
-<li data-filter=".graphic">Diseño grafico</li>
+<li data-filter=".graphic">Logos</li>
 </ul>
 </div>
 </div>
@@ -190,22 +190,24 @@
 		<div class="col-lg-4 col-sm-6 single-card-item app">
 		<div class="isotope_item hover-scale">
 		<div class="item-image">
-		<a href="https://www.frutmesuper.com" target="_blanck"><img src="images/portfolio/image-1.jpg" alt="portfolio" class="img-fluid"/> </a>
+		<a href="pwa.html" target="_blanck"><img src="images/portfolio/image-1.jpg" alt="portfolio" class="img-fluid"/> </a>
 		</div>
 		<div class="item-info">
 		<h4><a href="frutme.hmtl">FrutmeSuper</a></h4>
 		<p>PWA, e-commerce</p>
+		<strong>Venezuela</strong>
 		</div>
 		</div>
 		</div>
 		<div class="col-lg-4 col-sm-6 single-card-item app">
 			<div class="isotope_item hover-scale">
 			<div class="item-image">
-			<a href="penguins.html"><img src="images/portfolio/image-2.jpg" alt="image" class="img-fluid"/> </a>
+			<a href="pwa.html"><img src="images/portfolio/image-2.jpg" alt="image" class="img-fluid"/> </a>
 			</div>
 			<div class="item-info">
 			<h4><a href="https://www.penguinscleaning.ca" target="_blanck">Penguins cleaning</a></h4>
-			<p>PWA, pagina empresarial, ecommerce</p>
+			<p>PWA, pagina empresarial</p>
+			<strong>Canada</strong>
 			</div>
 			</div>
 		</div>
@@ -217,6 +219,7 @@
 			<div class="item-info">
 			<h4><a href="imdris.html" target="_blanck">Imdris</a></h4>
 			<p>Pagina web</p>
+			<strong>Mexico</strong>
 			</div>
 			</div>
 		</div>
@@ -228,10 +231,11 @@
 			<div class="item-info">
 			<h4><a href="ventiluz.html" target="_blanck">Ventiluz-Servicios</a></h4>
 			<p>Pagina web</p>
+			<strong>Argentina</strong>
 			</div>
 			</div>
 		</div>
-		<div class="col-lg-4 col-sm-6 single-card-item website">
+		<!-- <div class="col-lg-4 col-sm-6 single-card-item website">
 			<div class="isotope_item hover-scale">
 			<div class="item-image">
 			<a href="alena.html"><img src="images/portfolio/image-5.jpg" alt="image" class="img-fluid"/> </a>
@@ -241,40 +245,43 @@
 			<p>Pagina web</p>
 			</div>
 			</div>
-		</div>
+		</div> -->
 		<div class="col-lg-4 col-sm-6 single-card-item app">
 			<div class="isotope_item hover-scale">
 			<div class="item-image">
-			<a href="#"><img src="images/portfolio/image-6.jpg" alt="image" class="img-fluid"/> </a>
+			<a href="pwa.html"><img src="images/portfolio/image-6.jpg" alt="image" class="img-fluid"/> </a>
 			</div>
 			<div class="item-info">
-			<h4><a href="https://www.techosytabiquesmerida.com" target="_blanck">Techos y tabiques Mérida</a></h4>
+			<h4><a href="pwa.html" target="_blanck">Techos y tabiques Mérida</a></h4>
 			<p>PWA, E-commerce</p>
-			</div>
-			</div>
-		</div>
-		<div class="col-lg-4 col-sm-6 single-card-item app">
-			<div class="isotope_item hover-scale">
-			<div class="item-image">
-			<a href="#"><img src="images/portfolio/image-6.jpg" alt="image" class="img-fluid"/> </a>
-			</div>
-			<div class="item-info">
-			<h4><a href="https://www.corpcssca.com" target="_blanck">CSS CA</a></h4>
-			<p>PWA, E-commerce</p>
+			<strong>Venezuela</strong>
 			</div>
 			</div>
 		</div>
 		<div class="col-lg-4 col-sm-6 single-card-item app">
 			<div class="isotope_item hover-scale">
 			<div class="item-image">
-			<a href="#"><img src="images/portfolio/image-6.jpg" alt="image" class="img-fluid"/> </a>
+			<a href="pwa.html"><img src="images/portfolio/image-6.jpg" alt="image" class="img-fluid"/> </a>
 			</div>
 			<div class="item-info">
-			<h4><a href="#" target="_blanck">Acrilicos Merida</a></h4>
+			<h4><a href="pwa.html" target="_blanck">CSS CA</a></h4>
 			<p>PWA, E-commerce</p>
+			<strong>Venezuela-USA</strong>
 			</div>
 			</div>
 		</div>
+		<!-- <div class="col-lg-4 col-sm-6 single-card-item app">
+			<div class="isotope_item hover-scale">
+			<div class="item-image">
+			<a href="#"><img src="images/portfolio/image-6.jpg" alt="image" class="img-fluid"/> </a>
+			</div>
+			<div class="item-info">
+			<h4><a href="pwa.html" target="_blanck">Acrilicos Merida</a></h4>
+			<p>PWA, E-commerce</p>
+			<strong>Venezuela</strong>
+			</div>
+			</div>
+		</div> -->
 		<div class="col-lg-4 col-sm-6 single-card-item website">
 			<div class="isotope_item hover-scale">
 			<div class="item-image">
@@ -283,6 +290,7 @@
 			<div class="item-info">
 			<h4><a href="zanitizing.html" target="_blanck">Zanitizing</a></h4>
 			<p>Pagina web</p>
+			<strong>Mexico</strong>
 			</div>
 			</div>
 		</div>
@@ -294,6 +302,7 @@
 			<div class="item-info">
 			<h4><a href="planing.html" target="_blanck">PlanningLTDA</a></h4>
 			<p>Pagina web Portafolio profesional</p>
+			<strong>Chile</strong>
 			</div>
 			</div>
 		</div>
@@ -305,10 +314,23 @@
 			<div class="item-info">
 			<h4><a href="jkd.html">JKDRotulación</a></h4>
 			<p>Pagina web</p>
+			<strong>España</strong>
 			</div>
 			</div>
 		</div>
 		<div class="col-lg-4 col-sm-6 single-card-item  website">
+			<div class="isotope_item hover-scale">
+			<div class="item-image">
+			<a href="biker.html" target="_blanck"><img src="images/portfolio/image-9.jpg" alt="image" class="img-fluid"/> </a>
+			</div>
+			<div class="item-info">
+			<h4><a href="jkd.html">Bikertours</a></h4>
+			<p>Pagina web</p>
+			<strong>Mexico</strong>
+			</div>
+			</div>
+		</div>
+		<!-- <div class="col-lg-4 col-sm-6 single-card-item  website">
 			<div class="isotope_item hover-scale">
 			<div class="item-image">
 			<a href="francoazm.html"><img src="images/portfolio/image-9.jpg" alt="image" class="img-fluid"/> </a>
@@ -316,9 +338,10 @@
 			<div class="item-info">
 			<h4><a href="francoazm.html" target="_blanck">Francoazm</a></h4>
 			<p>Pagina web Portafolio profesional</p>
+			<strong>Canada</strong>
 			</div>
 			</div>
-		</div>
+		</div> -->
 </div>
 </div>
 </section>
