--- a/team.html
+++ b/team.html
@@ -347,19 +347,18 @@
                <div class="testimonial-slider owl-carousel">
                   <div class="testimonial-content">
                      <div class="testimonial-image">
-                        <img src="images/icon-image/author.jpg" alt="">
+                        <img src="images/icon-image/avatar3.jpg" alt="">
                      </div>
                      <div class="testimonial-meta">
                         <h4>
-                           Jhon 
-                           <small>Director de andes pro adventures</small>
+                           Dulce Grimaldo 
+                           <small>Ejecutiva RH en Mexico</small>
                         </h4>
                         <i class="icon icon-quote2"></i>
                      </div>
                      <!-- Testimonial Meta end -->
                      <div class="testimonial-text">
-                        <p>Start working with an company that can do provide every thing at you need to generate awareness,
-                           drive traffic, connect with</p>
+                        <p>Son un equipo de profesionales, que buscan brindar soluciones optimas a sus clientes, somos clientes de varios sitios web y estamos muy agradecidos!!</p>
                      </div>
                      <!-- TEstimonial text end -->
                   </div>
@@ -371,14 +370,31 @@
                      <div class="testimonial-meta">
                         <h4>
                            Manuel villanueva
-                           <small>Fundador de la Meseria</small>
+                           <small>Fundador de la Meseria Chile</small>
                         </h4>
                         <i class="icon icon-quote2"></i>
                      </div>
                      <!-- Testimonial Meta end -->
                      <div class="testimonial-text">
-                        <p>Start working with an company that can do provide every thing at you need to generate awareness,
-                           drive traffic, connect with</p>
+                        <p>Buckapi y su equipo, nos han apoyado en varios proyectos, gracias por su profesionalismo y humanismo, los recomiendo 100%</p>
+                     </div>
+                     <!-- TEstimonial text end -->
+                  </div>
+
+                  <div class="testimonial-content">
+                     <div class="testimonial-image">
+                        <img src="images/icon-image/avatar3.jpg" alt="">
+                     </div>
+                     <div class="testimonial-meta">
+                        <h4>
+                           Jessica Gomez
+                           <small>Fundador de la Penguins Clean service Canada</small>
+                        </h4>
+                        <i class="icon icon-quote2"></i>
+                     </div>
+                     <!-- Testimonial Meta end -->
+                     <div class="testimonial-text">
+                        <p>Si lo que necesitas es un equipo que te ayude a impulsar tu empresa, cuenta con Buckapi, me han apoyado muchisimo, son un buen equipo!!</p>
                      </div>
                      <!-- TEstimonial text end -->
                   </div>
@@ -390,62 +406,6 @@
       </div>
    </section>
   
-
-   <!-- <section id="tw-client" class="tw-client">
-      <div class="container">
-         <div class="row">
-            <div class="col-md-12">
-               <div class="clients-carousel owl-carousel">
-                  <div class="client-logo-wrapper d-table">
-                     <div class="client-logo d-table-cell">
-                        <img src="images/clients/client1.png" alt="">
-                     </div>
-                  </div>
-                  <div class="client-logo-wrapper d-table">
-                     <div class="client-logo d-table-cell">
-                        <img src="images/clients/client2.png" alt="">
-                     </div>
-                  </div>
-                  <div class="client-logo-wrapper d-table">
-                     <div class="client-logo d-table-cell">
-                        <img src="images/clients/client3.png" alt="">
-                     </div>
-                  </div>
-                  <div class="client-logo-wrapper d-table">
-                     <div class="client-logo d-table-cell">
-                        <img src="images/clients/client4.png" alt="">
-                     </div>
-                  </div>
-                  <div class="client-logo-wrapper d-table">
-                     <div class="client-logo d-table-cell">
-                        <img src="images/clients/client2.png" alt="">
-                     </div>
-                  </div>
-                  <div class="client-logo-wrapper d-table">
-                     <div class="client-logo d-table-cell">
-                        <img src="images/clients/client2.png" alt="">
-                     </div>
-                  </div>
-                  <div class="client-logo-wrapper d-table">
-                     <div class="client-logo d-table-cell">
-                        <img src="images/clients/client2.png" alt="">
-                     </div>
-                  </div>
-                  <div class="client-logo-wrapper d-table">
-                     <div class="client-logo d-table-cell">
-                        <img src="images/clients/client2.png" alt="">
-                     </div>
-                  </div>
-                  <div class="client-logo-wrapper d-table">
-                     <div class="client-logo d-table-cell">
-                        <img src="images/clients/client2.png" alt="">
-                     </div>
-                  </div>
-               </div>
-            </div>
-         </div>
-      </div>
-   </section> -->
 
 
     <footer id="tw-footer" class="tw-footer"style="margin-top: 125px;">
