--- a/portafolio/portfolio.html
+++ b/portafolio/portfolio.html
@@ -190,7 +190,7 @@
 		<div class="col-lg-4 col-sm-6 single-card-item app">
 		<div class="isotope_item hover-scale">
 		<div class="item-image">
-		<a href="pwa.html" target="_blanck"><img src="images/portfolio/image-1.jpg" alt="portfolio" class="img-fluid"/> </a>
+		<a href="pwa.html"><img src="images/portfolio/image-11.jpg" alt="portfolio" class="img-fluid"/> </a>
 		</div>
 		<div class="item-info">
 		<h4><a href="frutme.hmtl">FrutmeSuper</a></h4>
@@ -205,7 +205,7 @@
 			<a href="pwa.html"><img src="images/portfolio/penguins.jpg" alt="image" class="img-fluid"/> </a>
 			</div>
 			<div class="item-info">
-			<h4><a href="https://www.penguinscleaning.ca" target="_blanck">Penguins cleaning</a></h4>
+			<h4><a href="pwa.html" >Penguins cleaning</a></h4>
 			<p>PWA, pagina empresarial</p>
 			<strong>Canada</strong>
 			</div>
@@ -223,6 +223,18 @@
 			</div>
 			</div>
 		</div>
+		<div class="col-lg-4 col-sm-6 single-card-item  website">
+			<div class="isotope_item hover-scale">
+			<div class="item-image">
+			<a href="biker.html" target="_blanck"><img src="images/portfolio/bikertours.jpg" alt="image" class="img-fluid"/> </a>
+			</div>
+			<div class="item-info">
+			<h4><a href="jkd.html">Bikertours</a></h4>
+			<p>Pagina web</p>
+			<strong>Mexico</strong>
+			</div>
+			</div>
+		</div>
 		<div class="col-lg-4 col-sm-6 single-card-item website">
 			<div class="isotope_item hover-scale">
 			<div class="item-image">
@@ -235,6 +247,19 @@
 			</div>
 			</div>
 		</div>
+
+		<div class="col-lg-4 col-sm-6 single-card-item website">
+			<div class="isotope_item hover-scale">
+			<div class="item-image">
+			<a href="zanitizing.html"><img src="images/portfolio/image-12.jpg" alt="image" class="img-fluid"/> </a>
+			</div>
+			<div class="item-info">
+			<h4><a href="zanitizing.html" target="_blanck">Zanitizing</a></h4>
+			<p>Pagina web</p>
+			<strong>Mexico</strong>
+			</div>
+			</div>
+		</div>
 		
 		<div class="col-lg-4 col-sm-6 single-card-item app">
 			<div class="isotope_item hover-scale">
@@ -242,7 +267,7 @@
 			<a href="pwa.html"><img src="images/portfolio/image-6.jpg" alt="image" class="img-fluid"/> </a>
 			</div>
 			<div class="item-info">
-			<h4><a href="pwa.html" target="_blanck">Techos y tabiques Mérida</a></h4>
+			<h4><a href="pwa.html">Techos y tabiques Mérida</a></h4>
 			<p>PWA, E-commerce</p>
 			<strong>Venezuela</strong>
 			</div>
@@ -254,25 +279,14 @@
 			<a href="pwa.html"><img src="images/portfolio/image-6.jpg" alt="image" class="img-fluid"/> </a>
 			</div>
 			<div class="item-info">
-			<h4><a href="pwa.html" target="_blanck">CSS CA</a></h4>
+			<h4><a href="pwa.html">CSS CA</a></h4>
 			<p>PWA, E-commerce</p>
 			<strong>Venezuela-USA</strong>
 			</div>
 			</div>
 		</div>
 		
-		<div class="col-lg-4 col-sm-6 single-card-item website">
-			<div class="isotope_item hover-scale">
-			<div class="item-image">
-			<a href="zanitizing.html"><img src="images/portfolio/image-7.jpg" alt="image" class="img-fluid"/> </a>
-			</div>
-			<div class="item-info">
-			<h4><a href="zanitizing.html" target="_blanck">Zanitizing</a></h4>
-			<p>Pagina web</p>
-			<strong>Mexico</strong>
-			</div>
-			</div>
-		</div>
+		
 		<div class="col-lg-4 col-sm-6 single-card-item website">
 			<div class="isotope_item hover-scale">
 			<div class="item-image">
@@ -297,18 +311,7 @@
 			</div>
 			</div>
 		</div>
-		<div class="col-lg-4 col-sm-6 single-card-item  website">
-			<div class="isotope_item hover-scale">
-			<div class="item-image">
-			<a href="biker.html" target="_blanck"><img src="images/portfolio/bikertours.jpg" alt="image" class="img-fluid"/> </a>
-			</div>
-			<div class="item-info">
-			<h4><a href="jkd.html">Bikertours</a></h4>
-			<p>Pagina web</p>
-			<strong>Mexico</strong>
-			</div>
-			</div>
-		</div>
+		
 		
 </div>
 </div>
