--- a/portafolio/portfolio.html
+++ b/portafolio/portfolio.html
@@ -77,7 +77,7 @@
 	</div>
 </div>
 </li>
-<li><a href="https://wa.me/584147529202?text=Hola!!%20necesito%20de%20los%20servicios%20de%20buckapi" class="btn-br bg-btn3 btshad-b2 lnk" class="whatsapp" target="_blank" title="Hablemos por whatsapp !">Whatsapp<span class="circle"></span></a> </li>
+<li><a href="https://wa.me/584147529202?text=Hola!!%20necesito%20de%20los%20servicios%20de%20buckapi" class="btn-br bg-btn3 btshad-b2" class="whatsapp" target="_blank" title="Hablemos por whatsapp !">Whatsapp</a> </li>
 </ul>
 </div>
 <div class="mobile-menu2">
@@ -187,6 +187,18 @@
 </div>
 <div class="row card-list">
 	<div class="col-lg-4 col-md-6 grid-sizer"></div>
+		<div class="col-lg-4 col-sm-6 single-card-item  website">
+			<div class="isotope_item hover-scale">
+			<div class="item-image">
+			<a href="biker.html" target="_blanck"><img src="images/portfolio/bikertours.jpg" alt="image" class="img-fluid"/> </a>
+			</div>
+			<div class="item-info">
+			<h4><a href="jkd.html">Bikertours</a></h4>
+			<p>Pagina web</p>
+			<strong>Mexico</strong>
+			</div>
+			</div>
+		</div>
 		<div class="col-lg-4 col-sm-6 single-card-item app">
 		<div class="isotope_item hover-scale">
 		<div class="item-image">
@@ -223,18 +235,7 @@
 			</div>
 			</div>
 		</div>
-		<div class="col-lg-4 col-sm-6 single-card-item  website">
-			<div class="isotope_item hover-scale">
-			<div class="item-image">
-			<a href="biker.html" target="_blanck"><img src="images/portfolio/bikertours.jpg" alt="image" class="img-fluid"/> </a>
-			</div>
-			<div class="item-info">
-			<h4><a href="jkd.html">Bikertours</a></h4>
-			<p>Pagina web</p>
-			<strong>Mexico</strong>
-			</div>
-			</div>
-		</div>
+		
 		<div class="col-lg-4 col-sm-6 single-card-item website">
 			<div class="isotope_item hover-scale">
 			<div class="item-image">
