--- a/portafolio/portfolio.html
+++ b/portafolio/portfolio.html
@@ -193,7 +193,7 @@
 			<a href="biker.html" target="_blanck"><img src="images/portfolio/bikertours.jpg" alt="image" class="img-fluid"/> </a>
 			</div>
 			<div class="item-info">
-			<h4><a href="jkd.html">Bikertours</a></h4>
+			<h4><a href="biker.html">Bikertours</a></h4>
 			<p>Pagina web</p>
 			<strong>Mexico</strong>
 			</div>
@@ -205,7 +205,7 @@
 		<a href="pwa.html"><img src="images/portfolio/image-11.jpg" alt="portfolio" class="img-fluid"/> </a>
 		</div>
 		<div class="item-info">
-		<h4><a href="frutme.hmtl">FrutmeSuper</a></h4>
+		<h4><a href="https://www.frutmesupper.hmtl" target="_black">FrutmeSuper</a></h4>
 		<p>PWA, e-commerce</p>
 		<strong>Venezuela</strong>
 		</div>
@@ -217,7 +217,7 @@
 			<a href="pwa.html"><img src="images/portfolio/penguins.jpg" alt="image" class="img-fluid"/> </a>
 			</div>
 			<div class="item-info">
-			<h4><a href="pwa.html" >Penguins cleaning</a></h4>
+			<h4><a href="https://penguinscleaning.ca/" target="_blanck" >Penguins cleaning</a></h4>
 			<p>PWA, pagina empresarial</p>
 			<strong>Canada</strong>
 			</div>
@@ -277,7 +277,7 @@
 		<div class="col-lg-4 col-sm-6 single-card-item app">
 			<div class="isotope_item hover-scale">
 			<div class="item-image">
-			<a href="pwa.html"><img src="images/portfolio/image-6.jpg" alt="image" class="img-fluid"/> </a>
+			<a href="pwa.html"><img src="images/portfolio/image-9.jpg" alt="image" class="img-fluid"/> </a>
 			</div>
 			<div class="item-info">
 			<h4><a href="pwa.html">CSS CA</a></h4>
@@ -291,7 +291,7 @@
 		<div class="col-lg-4 col-sm-6 single-card-item website">
 			<div class="isotope_item hover-scale">
 			<div class="item-image">
-			<a href="planing.html"><img src="images/portfolio/image-8.jpg" alt="image" class="img-fluid"/> </a>
+			<a href="planing.html"><img src="images/portfolio/image1.jpg" alt="image" class="img-fluid"/> </a>
 			</div>
 			<div class="item-info">
 			<h4><a href="planing.html" target="_blanck">PlanningLTDA</a></h4>
