--- a/portafolio/pwa.html
+++ b/portafolio/pwa.html
@@ -237,11 +237,11 @@
               <div class="col-lg-12 col-sm-12 single-card-item website">
                 <div class="portfolio-block bg-gradient9">
                   <div class="portfolio-item-info">
-                    <span>Learning</span>
-                    <h3 class="mt30 mb30"><a href="#">Manuel Ramos</a></h3>
+                    <span>Ecommerce</span>
+                    <h3 class="mt30 mb30"><a href="#">Tehos y Tabiques Merida</a></h3>
                     <div class="reviews-card pr-shadow">
                       <div class="review-text">
-                        <p>Web app con catalogo de cursos en linea, chat video en linea.</p>
+                        <p>Web app con catalogo y tienda en linea</p>
                       </div>
                       <div class="-client-details-">
                         <div class="-reviewr">
@@ -249,7 +249,7 @@
                         </div>
                         <div class="reviewer-text">
                           <h4>PWA</h4>
-                          <p>E-learning, <small>El salvador</small></p>
+                          <p>E-commerce, Corporativo <small>Venezuela</small></p>
                         </div>
                       </div>
                     </div>
