--- a/portafolio/portfolio.html
+++ b/portafolio/portfolio.html
@@ -205,7 +205,7 @@
 		<a href="pwa.html"><img src="images/portfolio/image-11.jpg" alt="portfolio" class="img-fluid"/> </a>
 		</div>
 		<div class="item-info">
-		<h4><a href="https://www.frutmesupper.hmtl" target="_black">FrutmeSuper</a></h4>
+		<h4><a href="https://www.frutmesuper.com/" target="_black">FrutmeSuper</a></h4>
 		<p>PWA, e-commerce</p>
 		<strong>Venezuela</strong>
 		</div>
