--- a/portafolio/portfolio.html
+++ b/portafolio/portfolio.html
@@ -262,7 +262,7 @@
 			</div>
 		</div>
 		
-		<div class="col-lg-4 col-sm-6 single-card-item app">
+		<!-- <div class="col-lg-4 col-sm-6 single-card-item app">
 			<div class="isotope_item hover-scale">
 			<div class="item-image">
 			<a href="pwa.html"><img src="images/portfolio/image-6.jpg" alt="image" class="img-fluid"/> </a>
@@ -273,7 +273,7 @@
 			<strong>Venezuela</strong>
 			</div>
 			</div>
-		</div>
+		</div> -->
 		<div class="col-lg-4 col-sm-6 single-card-item app">
 			<div class="isotope_item hover-scale">
 			<div class="item-image">
@@ -300,7 +300,7 @@
 			</div>
 			</div>
 		</div>
-		<div class="col-lg-4 col-sm-6 single-card-item  website">
+		<!-- <div class="col-lg-4 col-sm-6 single-card-item  website">
 			<div class="isotope_item hover-scale">
 			<div class="item-image">
 			<a href="jkd.html" target="_blanck"><img src="images/portfolio/jkd.jpg" alt="image" class="img-fluid"/> </a>
@@ -311,7 +311,7 @@
 			<strong>España</strong>
 			</div>
 			</div>
-		</div>
+		</div> -->
 		
 		
 </div>
