--- a/portafolio/pwa.html
+++ b/portafolio/pwa.html
@@ -229,12 +229,12 @@
                     </div>
                   </div>
                   <div class="portfolio-item-image">
-                    <a href="#"><img src="images/portfolio/website-mockup3.jpg" alt="portfolio" class="img-fluid"/> </a>
+                    <a href="#"><img src="images/portfolio/image-9.jpg" alt="portfolio" class="img-fluid"/> </a>
                   </div>
                 </div>
               </div>
 
-              <div class="col-lg-12 col-sm-12 single-card-item website">
+              <!-- <div class="col-lg-12 col-sm-12 single-card-item website">
                 <div class="portfolio-block bg-gradient9">
                   <div class="portfolio-item-info">
                     <span>Ecommerce</span>
@@ -258,7 +258,7 @@
                     <a href="#"><img src="images/portfolio/website-mockup6.jpg" alt="portfolio" class="img-fluid"/> </a>
                   </div>
                 </div>
-              </div>
+              </div> -->
 
             </div>
           </div>
